--- a/content/stylish-portfolio.css
+++ b/content/stylish-portfolio.css
@@ -159,7 +159,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(/marten/content/images/marten.jpeg) no-repeat center center scroll;
+    background: url(/content/images/marten.jpeg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
