--- a/documentation/documents/querying/include/index.html
+++ b/documentation/documents/querying/include/index.html
@@ -6,9 +6,9 @@
         <meta name="generator" content="Bootply" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Marten - Including Related Documents</title>
-		<link href="/marten/content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="/marten/content/prism.css" rel="stylesheet" type="text/css" />
-		<link href="/marten/content/theme.css" rel="stylesheet" type="text/css" />
+		<link href="/content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/content/prism.css" rel="stylesheet" type="text/css" />
+		<link href="/content/theme.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
         
 
@@ -18,7 +18,7 @@
 
 
         <!-- CSS code from Bootply.com editor -->
-        <link href="/marten/content/affix.css" rel="stylesheet" type="text/css" />
+        <link href="/content/affix.css" rel="stylesheet" type="text/css" />
     </head>
     
     <!-- HTML code from Bootply.com editor -->
@@ -30,21 +30,21 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.0</a>
+		      <a href="/" class="navbar-brand">Marten 1.2</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
             <li>
-              <a href="/marten/getting_started">Getting Started</a>
+              <a href="/getting_started">Getting Started</a>
             </li>
 		        <li>
-		          <a href="/marten/documentation">Documentation</a>
+		          <a href="/documentation">Documentation</a>
 		        </li>
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
-		      	<li><a href="/marten/documentation/documents/querying/query_json" title="Query for Raw JSON">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/querying/compiled_queries" title="Compiled Queries">Next</a></li>
+		      	<li><a href="/documentation/documents/querying/query_json" title="Query for Raw JSON">Previous</a></li>
+		      	<li><a href="/documentation/documents/querying/compiled_queries" title="Compiled Queries">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -59,7 +59,7 @@
 
 		  <div class="container">
 		  	<nav class="navbar-inverse">
-		  		<ol class="breadcrumb"><li><a href="/marten/">Marten</a></li><li><a href="/marten/documentation">Documentation</a></li><li><a href="/marten/documentation/documents">Marten as Document Db</a></li><li><a href="/marten/documentation/documents/querying">Querying Documents</a></li><li class="active">Including Related Documents</li></ol>
+		  		<ol class="breadcrumb"><li><a href="/">Marten</a></li><li><a href="/documentation">Documentation</a></li><li><a href="/documentation/documents">Marten as Document Db</a></li><li><a href="/documentation/documents/querying">Querying Documents</a></li><li class="active">Including Related Documents</li></ol>
 		  	</nav>
 		  </div>
 
@@ -77,8 +77,8 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></p>
-		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/documentation/documents/querying/compiled_queries">Compiled Queries</a></p>
+		        	<h3 class="no-margin">Previous</h3><a href="/documentation/documents/querying/query_json">Query for Raw JSON</a></p>
 
 		        </ul>
 		      </div><!--/left-->
@@ -94,95 +94,15 @@
 <!--Url:include-->
 <h2>Join a Single Document</h2>
 <p>Marten supports the ability to run include queries that execute a <code>join</code> SQL query behind the curtains, in order to fetch a referenced document as well as the queried document. Suppose you are querying for a github <code>Issue</code> that contains a property <code>AssigneeId</code>, which references the Id of the <code>User</code> assigned to the Issue. If you wish to fetch the <code>User</code> as well in one trip to the database, you can use the <code>.Include()</code> method like so:</p>
-<pre><code class="language-csharp">
-        [Fact]
-        public void simple_include_for_a_single_document()
-        {
-            var user = new User();
-            var issue = new Issue {AssigneeId = user.Id, Title = &quot;Garage Door is busted&quot;};
-
-            theSession.Store&lt;object&gt;(user, issue);
-            theSession.SaveChanges();
-
-            using (var query = theStore.QuerySession())
-            {
-                User included = null;
-                var issue2 = query.Query&lt;Issue&gt;()
-                    .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; included = x)
-                    .Where(x =&gt; x.Title == issue.Title)
-                    .Single();
-
-                included.ShouldNotBeNull();
-                included.Id.ShouldBe(user.Id);
-
-                issue2.ShouldNotBeNull();
-            }
-        }
-</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void simple_include_for_a_single_document()&#xD;&#xA;{&#xD;&#xA;    var user = new User();&#xD;&#xA;    var issue = new Issue {AssigneeId = user.Id, Title = &quot;Garage Door is busted&quot;};&#xD;&#xA;&#xD;&#xA;    theSession.Store&lt;object&gt;(user, issue);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        User included = null;&#xD;&#xA;        var issue2 = query.Query&lt;Issue&gt;()&#xD;&#xA;            .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; included = x)&#xD;&#xA;            .Where(x =&gt; x.Title == issue.Title)&#xD;&#xA;            .Single();&#xD;&#xA;&#xD;&#xA;        included.ShouldNotBeNull();&#xD;&#xA;        included.Id.ShouldBe(user.Id);&#xD;&#xA;&#xD;&#xA;        issue2.ShouldNotBeNull();&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>The first parameter of the <code>Include()</code> method takes an expression that specifies the document properties on which the join will be done (<code>AssigneeId</code> in this case). The second parameter is the expression that will assign the fetched related document to a previously declared variable (<code>included</code> in our case). By default, Marten will use an inner join. This means that any <code>Issue</code> with no corresponding <code>User</code> (or no <code>AssigneeId</code>), will not be fetched. If you wish to override this behaviour, you can add as a third parameter the enum <code>JoinType.LeftOuter</code>.</p>
 <h2>Join Many Documents</h2>
 <p>If you wish to fetch a list of related documents, you can declare a <code>List&lt;User&gt;</code> variable and pass it as the second parameter. The <code>Include()</code> method should be appended with <code>ToList()</code> or <code>ToArray()</code>.</p>
 <p>Instead of a List, you could also use a Dictionary with a key type corresponding to the Id type and a value type corresponding to the Document type:</p>
-<pre><code class="language-csharp">
-        [Fact]
-        public void include_to_dictionary()
-        {
-            var user1 = new User();
-            var user2 = new User();
-
-            var issue1 = new Issue { AssigneeId = user1.Id, Title = &quot;Garage Door is busted&quot; };
-            var issue2 = new Issue { AssigneeId = user2.Id, Title = &quot;Garage Door is busted&quot; };
-            var issue3 = new Issue { AssigneeId = user2.Id, Title = &quot;Garage Door is busted&quot; };
-
-            theSession.Store(user1, user2);
-            theSession.Store(issue1, issue2, issue3);
-            theSession.SaveChanges();
-
-            using (var query = theStore.QuerySession())
-            {
-                var dict = new Dictionary&lt;Guid, User&gt;();
-
-                query.Query&lt;Issue&gt;().Include(x =&gt; x.AssigneeId, dict).ToArray();
-
-                dict.Count.ShouldBe(2);
-                dict.ContainsKey(user1.Id).ShouldBeTrue();
-                dict.ContainsKey(user2.Id).ShouldBeTrue();
-            }
-        }
-</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void include_to_dictionary()&#xD;&#xA;{&#xD;&#xA;    var user1 = new User();&#xD;&#xA;    var user2 = new User();&#xD;&#xA;&#xD;&#xA;    var issue1 = new Issue { AssigneeId = user1.Id, Title = &quot;Garage Door is busted&quot; };&#xD;&#xA;    var issue2 = new Issue { AssigneeId = user2.Id, Title = &quot;Garage Door is busted&quot; };&#xD;&#xA;    var issue3 = new Issue { AssigneeId = user2.Id, Title = &quot;Garage Door is busted&quot; };&#xD;&#xA;&#xD;&#xA;    theSession.Store(user1, user2);&#xD;&#xA;    theSession.Store(issue1, issue2, issue3);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var dict = new Dictionary&lt;Guid, User&gt;();&#xD;&#xA;&#xD;&#xA;        query.Query&lt;Issue&gt;().Include(x =&gt; x.AssigneeId, dict).ToArray();&#xD;&#xA;&#xD;&#xA;        dict.Count.ShouldBe(2);&#xD;&#xA;        dict.ContainsKey(user1.Id).ShouldBeTrue();&#xD;&#xA;        dict.ContainsKey(user2.Id).ShouldBeTrue();&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <h2>Include Multiple Document Types</h2>
 <p>Marten also allows you to chain multiple <code>Include()</code> calls:</p>
-<pre><code class="language-csharp">
-        [Fact]
-        public void multiple_includes()
-        {
-            var assignee = new User();
-            var reporter = new User();
-
-            var issue1 = new Issue { AssigneeId = assignee.Id, ReporterId = reporter.Id, Title = &quot;Garage Door is busted&quot; };
-
-            theSession.Store(assignee, reporter);
-            theSession.Store(issue1);
-            theSession.SaveChanges();
-
-            using (var query = theStore.QuerySession())
-            {
-
-                User assignee2 = null;
-                User reporter2 = null;
-
-                query
-                    .Query&lt;Issue&gt;()
-                    .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; assignee2 = x)
-                    .Include&lt;User&gt;(x =&gt; x.ReporterId, x =&gt; reporter2 = x).Single()
-                    .ShouldNotBeNull();
-
-                assignee2.Id.ShouldBe(assignee.Id);
-                reporter2.Id.ShouldBe(reporter.Id);
-
-            }
-        }
-</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void multiple_includes()&#xD;&#xA;{&#xD;&#xA;    var assignee = new User();&#xD;&#xA;    var reporter = new User();&#xD;&#xA;&#xD;&#xA;    var issue1 = new Issue { AssigneeId = assignee.Id, ReporterId = reporter.Id, Title = &quot;Garage Door is busted&quot; };&#xD;&#xA;&#xD;&#xA;    theSession.Store(assignee, reporter);&#xD;&#xA;    theSession.Store(issue1);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;&#xD;&#xA;        User assignee2 = null;&#xD;&#xA;        User reporter2 = null;&#xD;&#xA;&#xD;&#xA;        query&#xD;&#xA;            .Query&lt;Issue&gt;()&#xD;&#xA;            .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; assignee2 = x)&#xD;&#xA;            .Include&lt;User&gt;(x =&gt; x.ReporterId, x =&gt; reporter2 = x).Single()&#xD;&#xA;            .ShouldNotBeNull();&#xD;&#xA;&#xD;&#xA;        assignee2.Id.ShouldBe(assignee.Id);&#xD;&#xA;        reporter2.Id.ShouldBe(reporter.Id);&#xD;&#xA;&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <h2>Chaining other Linq Methods</h2>
 <p>Marten supports chaining other linq methods to allow more complex quries such as:</p>
 <ul>
@@ -197,16 +117,8 @@
 <li><code>SingleAsync()</code></li>
 </ul>
 <p>And so on...</p>
-<p>Marten also supports running an Include query within <a href="/marten/documentation/documents/querying/batched_queries">Batched Queries</a>:</p>
-<pre><code class="language-csharp">
-                var batch = query.CreateBatchQuery();
-
-                var found = batch.Query&lt;Issue&gt;()
-                    .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; included = x)
-                    .Where(x =&gt; x.Title == issue1.Title)
-                    .Single();
-</code></pre>
-
+<p>Marten also supports running an Include query within <a href="/documentation/documents/querying/batched_queries">Batched Queries</a>:</p>
+<pre><code class="language-csharp">&#xD;&#xA;var batch = query.CreateBatchQuery();&#xD;&#xA;&#xD;&#xA;var found = batch.Query&lt;Issue&gt;()&#xD;&#xA;    .Include&lt;User&gt;(x =&gt; x.AssigneeId, x =&gt; included = x)&#xD;&#xA;    .Where(x =&gt; x.Title == issue1.Title)&#xD;&#xA;    .Single();&#xD;&#xA;</code></pre>
 
 			      	</div>
 
@@ -214,12 +126,12 @@
 
 			      	<nav>
 				        <span>
-				        	<strong>Previous: </strong><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a>
+				        	<strong>Previous: </strong><a href="/documentation/documents/querying/query_json">Query for Raw JSON</a>
 
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a>
+				        	<strong>Next: </strong><a href="/documentation/documents/querying/compiled_queries">Compiled Queries</a>
 
 				        </span>
 			      	</nav>
@@ -236,10 +148,10 @@
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="/marten/content/embed.js"></script>
-        <script type="text/javascript" src="/marten/content/prism.js"></script>
-        <script type="text/javascript" src="/marten/content/sidebar.js"></script>
-        <script type="text/javascript" src="/marten/content/affix.js"></script>
+        <script type="text/javascript" src="/content/embed.js"></script>
+        <script type="text/javascript" src="/content/prism.js"></script>
+        <script type="text/javascript" src="/content/sidebar.js"></script>
+        <script type="text/javascript" src="/content/affix.js"></script>
 
 <script>
 $('#search').keyup(function(e){
