Add child collection linq example
* Fix breadcrumb background
* Update CI link to AppVeyor

--- a/documentation/content/theme.css
+++ b/documentation/content/theme.css
@@ -43,3 +43,7 @@ i.command-description {
 .command-section h4 {
     margin-bottom: 10px;
 }
+
+.navbar-inverse {
+     background-color: transparent;
+}
