--- a/content/theme.css
+++ b/content/theme.css
@@ -43,3 +43,7 @@ i.command-description {
 .command-section h4 {
     margin-bottom: 10px;
 }
+
+.navbar-inverse {
+     background-color: transparent;
+}
