--- a/documentation/content/stylish-portfolio.css
+++ b/documentation/content/stylish-portfolio.css
@@ -254,3 +254,13 @@ footer {
     max-height: 100px;
     padding: 10px;
 }
+
+#video-content {
+    width: 100%;
+    height: 540px;
+}
+
+.spacer {
+    height: 100px;
+}
+
